    + [NT] Add release date for 3.9.5.

  * debian/control:
    + [NT] Bump Standards-Versions to 3.9.5 - no changes required.

  * lib/Lintian/Check.pm:
    + [RG] Detect a few more spelling mistakes by removing some
      suffixes before looking them up in the list of spelling mistakes.
    + [BR] Add a list of global exception for spelling mistakes.
      (Closes: #730715)
  * lib/Lintian/Collect/Package.pm:
    + [BR] Globally replace \\ by \ in _dequote_name(). This bug was
      masked by old buggy tar (Closes: #727665).

  * vendors/ubuntu/main/data/changes-file/known-dists:
    + [NT] Add "trusty".  Thanks to Stéphane Graber for the
      reminder.

 -- Niels Thykier <niels@thykier.net>  Thu, 26 Sep 2013 09:35:27 +0200

lintian (2.5.19) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - homepage-in-binary-package

  * checks/fields.{desc,pm}:
    + [NT] Add check for "Homepage"-field missing in the
      source, when one of the binary packages has the
      field.  Thanks to Ricardo Mones for the bug report.
      (Closes: #693117)
  * checks/files.pm:
    + [NT] Apply patch from Samuel Thibault to fix a
      false-positive non-standard-toplevel-dir for the
      directories /hurd and /servers.  (Closes: #724524)
    + [NT] Work around bug #724571 in t1disasm by ignoring
      failures caused by segementation faults and bus errors.
      Though, Lintian will emit a warning when such an error
      occurs.  Thanks to Ansgar Burchardt for the report.
      (Closes: #724319)
  * checks/testsuite.pm:
    + [NT] Allow uppercase letters in the names of DEP-8
      tests, now that the DEP-8 officially "tolerates" them.
      (see #711844)

  * lib/Lintian/Util.pm:
    + [NT] Add drain_pipe(FD).

  * reporting/{config,harness}:
    + [NT] Determine the html_reports command automatically
      instead of allowing it to be configurable.
    + [NT] Stop allowing config script to name individual