@@ -393,7 +393,7 @@ sub objdump_info {
             # Here we just need RPATH and NEEDS, so ignore the rest for now
             my ($header, $val) = split m/\s++/, $data;
             if ($header eq 'RPATH') {
-                $info{$header}->{$val} = 1;
+                map {$info{$header}->{$_} = 1;} split m/:/, $val;
             } elsif ($header eq 'NEEDED' or $header eq 'SONAME') {
                 push @{ $info{$header} }, $val;
             } elsif ($header eq 'TEXTREL') {
